# musicbrainz_rust

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  rustfmt.toml
codegen/: common.rb  searchfields.json  searchfields.rb
replay/test_entities/Area/: 2db42837-c832-3c27-b4a3-08198f75693c.json  a1411661-be21-4290-8dc1-50f3d8e3ea67.json
replay/test_entities/Artist/: 650e7db6-b795-4eb5-a702-5ea2fc46c848.json  90e7c2f9-273b-4d6c-a662-ab2d73ea4b8e.json
replay/test_entities/Event/: 6e2ab7d5-f340-4c41-99a3-c901733402b4.json  9754f4dd-6fad-49b7-8f30-940c9af6b776.json
replay/test_entities/Label/: 168f48c8-057e-4974-9600-aa9956d21e1a.json  c029628b-6633-439e-bcee-ed02e8a338f7.json
replay/test_entities/Place/: d1ab65f8-d082-492a-bd70-ce375548dabf.json
replay/test_entities/Recording/: fbe3d0b9-3990-4a76-bddb-12f4a0447a2c.json
replay/test_entities/Release/: 02173013-59ed-4229-b0a5-e5aa486ed5d7.json  61f8b05f-a3b5-49f4-a3a6-8f0d564c1664.json  785d7c67-a920-4cee-a871-8cd9896eb8aa.json  ce22b20d-3a45-4e47-abaa-b7c8d10281fa.json  d1881a4c-0188-4f0f-a2e7-4e7849aec109.json  (+1 more)
src/: diesel_integration.rs  error.rs  errors.rs  lib.rs  rusqlite_support.rs  util.rs
src/client/: error.rs  mod.rs  request.rs
src/client/search/: mod.rs  (+4 more)
src/entities/: alias.rs  area.rs  artist.rs  date.rs  event.rs  helper.rs  label.rs  lang.rs  mbid.rs  mod.rs  place.rs  recording.rs  refs.rs  release.rs  release_2.rs  release_group.rs  series.rs
src/search/: fields.rs  mod.rs  query.rs  query_builder.rs  response.rs  search_entities.rs
testing/: .gitignore  README.md  extract_ids.py  test_entities.py
(+20 files in other folders)
