[package]
name = "musicbrainz"
version = "0.1.0"
authors = ["Leo Schwarz <mail@leoschwarz.com>"]
license = "Apache-2.0"
repository = "https://github.com/leoschwarz/musicbrainz_rust"

[features]
default = []

[dependencies]
error-chain = "0.10.0"
regex = "0.2.1"
reqwest_mock = { git = "https://github.com/leoschwarz/reqwest_mock" }
rusqlite = { version = "0.11.0", optional = true }
url = "1.4.0"
uuid = { version = "0.5.0", features = ["use_std"] }
xpath_reader = "0.2.0"

