[package]
name = "musicbrainz"
version = "0.1.0"
authors = ["Leo Schwarz <mail@leoschwarz.com>"]
license = "Apache-2.0"
repository = "https://github.com/leoschwarz/musicbrainz_rust"

[features]
default = []

[dependencies]
error-chain = "0.10.0"
isolang = "0.1.1"
regex = "0.2.1"
reqwest_mock = "0.3.0"
rusqlite = { version = "0.12.0", optional = true }
url = "1.4.0"
uuid = { version = "0.5.0", features = ["use_std"] }
xpath_reader = "0.3.0"

[dev-dependencies]
pretty_env_logger = "0.1.1"
log = "0.3"
