[package]
name = "musicbrainz"
version = "0.1.0"
authors = ["Leo Schwarz <mail@leoschwarz.com>"]
license = "Apache-2.0"
repository = "https://github.com/leoschwarz/musicbrainz_rust"
edition = "2018"

[features]
default = []

[dependencies]
error-chain = "0.11"
isolang = "1"
regex = "1"
reqwest_mock = "0.5"
rusqlite = { version = "0.12.0", optional = true }
url = "1.4.0"
uuid = { version = "0.7" }
xpath_reader = "0.5"

[dev-dependencies]
pretty_env_logger = "0.3"
log = "0.4"
